# qqbot

./: .dockerignore  .env.example  .gitignore  CHAT_STATS_GUIDE.md  COST_OPTIMIZATION_DEPLOYMENT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_OPENCLAW.md  Dockerfile  FEATURE_COMPARISON.md  FORWARDING_GUIDE.md  LICENSE  MULTIMODAL_DEPLOYMENT.md  NAPCAT_SETUP.md  PHASE2_DEPLOYMENT.md  QQ_FACE_SUPPORT.md  README.md  TOKEN_COST_ANALYSIS.md  bot.py  deploy.sh  docker-compose.yml  healthcheck.sh  pyproject.toml  requirements.txt  test_message_forwarder.py
.github/workflows/: ci.yml
src/plugins/admin_clear/: __init__.py
src/plugins/admin_clear_group/: __init__.py
src/plugins/admin_panel/: __init__.py
src/plugins/ai_summary/: __init__.py
src/plugins/basic_ops/: __init__.py  admin_clear.py
src/plugins/chat/: __init__.py
src/plugins/chat_stats/: __init__.py  stats_manager.py
src/plugins/db_manager/: __init__.py
src/plugins/draw/: __init__.py
src/plugins/external_api/: __init__.py
src/plugins/openclaw_bridge/: __init__.py
src/plugins/reminders/: __init__.py
src/plugins/rss_sub/: __init__.py
src/plugins/scheduler/: __init__.py
src/plugins/status/: __init__.py
src/plugins/task_manager/: __init__.py
src/utils/: audio_converter.py  auth.py  bot_state.py  conversation_memory.py  database.py  gemini_client.py  image_compressor.py  image_utils.py  media_downloader.py  message_forwarder.py  message_parser.py  model_router.py  openai_client.py  qq_face_map.py  quota_manager.py  safe_bot.py  text_formatter.py
