[project]
name = "qqbot"
version = "1.0.0"
description = "Minimal QQ adapter for OpenClaw"
readme = "README.md"
requires-python = ">=3.8"

[tool.nonebot]
adapters = [
  { name = "OneBot V11", module = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins/openclaw_bridge"]
builtin_plugins = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
