[project]
name = "qqbot"
version = "0.1.0"
description = "QQ Robot for personal assistance"
readme = "README.md"
requires-python = ">=3.8"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "qqbot"
version = "0.1.0"
description = "QQ Robot for personal assistance"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = "^2.0.0"
apscheduler = "^3.10.0"
feedparser = "^6.0.0"
aiohttp = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
